# silver-amber-compiler

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  dockerfile  input.ffo  lexer.c  lr1_items.txt  main.c  makefile  parser.c  preprocessor.c  run.sh  source_code.ffo
.github/workflows/: cmake-single-platform.yml
c-archive/docs/: Grammar.txt
c-archive/include/: ast.h  macro.h  parser.h  tables.h
c-archive/src/: main.c  preprocessor.c  tokenizer.c
c-archive/tests/: test_lexer.c
compiler-files/: lexer.c  lexer.h  macro.c  macro.h  main.c  main.h  preprocessor.c  preprocessor.h  tokenizer.c
data/: factorial.ffo  raw_code.ffo  sum.ffo
docs/: CFGrammar.md  CLR(1) Table.xlsx  CLR1_Action_Table.csv  CLR1_Goto_Table.csv  Grammar.txt  Test Grammar.txt  grammar.md  grammer.md
include/: ast.h  lexer.h  lexerSymbolPipeline.h  main.h  parser.h  preprocessor.h  symbol.h  tables.h  tokenizer.h
src/: arena.hpp  ast.c  generator.hpp  lexer.c  lexerSymbolPipeline.c  main.c  main.cpp  parser.c  parser.hpp  symbol.c  tables.c  tokenization.hpp  tokenizer.c
